Bug 59779 - Double click on page style name in Styles and Formatting does not work
Summary: Double click on page style name in Styles and Formatting does not work
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.0.1 rc
Hardware: All All
: medium normal
Assignee: Cédric Bosdonnat
URL:
Whiteboard: bibisected40 target:4.1.0 target:4.0.0
Keywords: regression
: 58368 59270 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-01-23 20:59 UTC by Jean-Baptiste Faure
Modified: 2013-04-24 22:17 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
bibisect40 log (2.85 KB, text/plain)
2013-01-24 14:00 UTC, Jorendc
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jean-Baptiste Faure 2013-01-23 20:59:22 UTC
Steps to reproduce:
1/ open a new empty text document in Writer
2/ F11 to open Styles and Formatting
3/ click on page styles icon
4/ double-click on Landscape page style name
==> nothing happens
5/ right click on the page style name and choose Modify
6/ do nothing but click the Apply button
==> the page style is applied ; click on OK or Cancel button
7/ double click on Default Style page style name
==> this time it works as expected: the page style is applied
8/ double click on Landscape page style name
==> it works too
9/ double click on Envelope page style name
==> it does not work, you need to redo steps 5 and 6

Tested on Version 4.0.1.0+ (Build ID: 85e7a0f6cd9b311e6734e747b03ad0a736ff6db) under Ubuntu 12.04 x86-64.
Discussed on FR QA mailing list and reproduced with LO 4.0.0.1 under MS-Windows.

Best regards. JBF
Comment 1 Jean-Baptiste Faure 2013-01-23 21:02:58 UTC
Works as expected with LibreOffice 3.6.4 so regression keyword set.

Cédric: perhaps something for you. Please, could you have a look?

Best regards. JBF
Comment 2 Jacques Guilleron 2013-01-23 22:04:49 UTC
confirm this behaviour on LO 4.0.1.0+ (Build ID: 183f72485d67867792c2e4b966f0ebceab3d0a7), Windows 7 Home Premium

Jacques Guilleron
Comment 3 pierre-yves samyn 2013-01-24 07:49:23 UTC
Hello

Reproduced on Windows 7 64bits & Windows XP Pro with 
Version 4.0.0.1 (Build ID: 527dba6f6e0cfbbc71bd6e7b88a52699bb48799)

Regards
Pierre-Yves
Comment 4 Jorendc 2013-01-24 12:19:08 UTC
I can reproduce using Mac OSX 10.8.2 LibreOffice 4.0.0.1 RC1;

I'll try to bibisect it when it's downloaded.
Comment 5 Jorendc 2013-01-24 14:00:43 UTC
Created attachment 73585 [details]
bibisect40 log
Comment 6 Jorendc 2013-01-24 14:20:00 UTC
It's not reproducible when you go to the second page:

Steps:
* Open Writer
* Just press 'enter' till you create a second page
* set page style to Landscape (see Description)

result: good behavior, landscape is used.

range: http://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=d18455e24644a90cbf9f146ea8b4eed74180592b..e9960f36675a025c0536dec30ae56c50f4adecb1

So I think these bug is introduced with the changes Miklos made (for example: http://cgit.freedesktop.org/libreoffice/core/commit/?id=5c19b8701c58fbb49188ce2210879ce6f4431471 )
Comment 8 Not Assigned 2013-01-25 14:35:36 UTC
Cedric Bosdonnat committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b0a2b73222482d1379e90b636efdf44a48ba3ab6

fdo#59779: Set the first page attributes on pooled styles creation



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Not Assigned 2013-01-28 15:10:13 UTC
Cedric Bosdonnat committed a patch related to this issue.
It has been pushed to "libreoffice-4-0-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2f8abaad2830530ad299221d72964894d5ddb402&h=libreoffice-4-0-0

fdo#59779: Set the first page attributes on pooled styles creation


It will be available already in LibreOffice 4.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Not Assigned 2013-01-28 15:16:09 UTC
Cedric Bosdonnat committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=66cb07cf28186840b8e32d1260b522b5bc7937ea&h=libreoffice-4-0

fdo#59779: Set the first page attributes on pooled styles creation


It will be available in LibreOffice 4.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Michael Stahl 2013-01-30 20:29:49 UTC
*** Bug 59270 has been marked as a duplicate of this bug. ***
Comment 12 Michael Stahl 2013-01-30 20:33:44 UTC
looks like it's fixed now
Comment 13 Michael Stahl 2013-04-24 22:17:36 UTC
*** Bug 58368 has been marked as a duplicate of this bug. ***