fdo#59779: Set the first page attributes on pooled styles creation