sw/source/core/doc/poolfmt.cxx
@@ -1597,6 +1597,7 @@ SwPageDesc* SwDoc::GetPageDescFromPool( sal_uInt16 nId, bool bRegardLanguage )
             if( bSetLeft )
                 pNewPgDsc->GetLeft().SetFmtAttr( aSet );
             pNewPgDsc->GetMaster().SetFmtAttr( aSet );
+            pNewPgDsc->GetFirst().SetFmtAttr( aSet );
         }
     }
     return pNewPgDsc;
